# mbc

./: .appveyor.yml  .editorconfig  .gitattributes  .travis.yml  CMakeLists.txt  README.md  core.c  libmbc.c  libmbc.h  mbc.c  mbc.h  notes.md  test.c  version.cmake
cmake/: version.cmake
doc/: notes.md
man/: CMakeLists.txt  libmbc.3  libmbc.3.adoc  libmbc.3.ronn  libmbc.pod  mbc.1  mbc.1.adoc  mbc.1.ronn  mbc.pod
src/: libmbc.c  libmbc.h  mbc.c  test.c  test_file.c
test/: CMakeLists.txt  mem_control.h  mfail_disable.h  mfail_enable.h  mfail_post.h  mfail_pre.h  test.sh
test/integration/: libmbc.int.c  main.c  mbc.int.c  mbc.int.sh
test/memory/: libmbc.mem.c  main.c
test/unit/: libmbc.unit.c  main.c
